fixed mobile view

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
         <div id="informations">
             <img class='thatimage' src="images/caduceus-symbol.png">
             <h1>Free Health Screener</h1>
-            <p id="descriptionOfMain">Is there something you are worrying about? Do you want to check on yourself? Or, are you seeking help? You are in the right place! Scroll down and see the FREE services we offer and how they can help you! We wish you the best in both your Mental and Physical Health!</p>
+            <p class="descriptionOfMain">Is there something you are worrying about? Do you want to check on yourself? Or, are you seeking help? You are in the right place! Scroll down and see the FREE services we offer and how they can help you! We wish you the best in both your Mental and Physical Health!</p>
         </div>
         <div id="covidq">
             <img class='thatimage' src="images/virus.png">
             <h1>Feeling Sick? Afraid of Covid?</h1>
-            <h3>Don't worry yet! Check our questionnaire first!</h1>
-            <p id="descriptionOfMain">The Coronavirus Self-Checker is an interactive clinical assessment tool that will assist individuals ages 13 and older, and parents and caregivers of children ages 2 to 12 on deciding when to seek testing or medical care if they suspect they or someone they know has contracted COVID-19 or has come into close contact with someone who has COVID-19.</p>
+            <h3 class="questionaireq">Don't worry yet! Check our questionnaire first!</h1>
+            <p class="descriptionOfMain">The Coronavirus Self-Checker is an interactive clinical assessment tool that will assist individuals ages 13 and older, and parents and caregivers of children ages 2 to 12 on deciding when to seek testing or medical care if they suspect they or someone they know has contracted COVID-19 or has come into close contact with someone who has COVID-19.</p>
             <div data-cdc-widget='healthBot' data-cdc-theme='theme1' class='cdc-widget-color-white'  data-cdc-language='en-us'></div>
         </div>
         <div id="counselorbot">
             <img class='thatimage' src="images/sad.png">
             <h1>Are you lonely?</h1>
             <h3>Do you want someone to talk to?</h3>
-            <p id="descriptionOfMain">Do you often conduct long therapy sessions to get to the bottom of the problem? Well then this bot is all you need. Mibot’s set of questionnaire helps in diagnosing symptoms, calculates the severity and offers valuable remedies and feedback.</p>
+            <p class="descriptionOfMain">Do you often conduct long therapy sessions to get to the bottom of the problem? Well then this bot is all you need. Mibot’s set of questionnaire helps in diagnosing symptoms, calculates the severity and offers valuable remedies and feedback.</p>
             <iframe src="https://chatbot.hellotars.com/conv/rk958m" style="width: 400px;height: 620px;box-shadow: 0 20px 80px rgba(0,0,0,.6);border-radius: 5px;overflow: hidden;border: none;"></iframe>
         </div>
     </div>
