--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helperex</title>
+    <meta property="og:title" content="Helperex">
+    <meta property="og:description" content="Helperex is a health screener where you can receive Physical and Mental Health support.">
+    <meta property="og:image" content="images/repository-open-graph-template.png">
+    <meta property="og:url" content="https://rock2003.github.io/Helperex/">
+
     <link rel="icon" href="images/heart.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
