--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                     <a class='thelinks' style="text-decoration:none" href="https://www.ybentaleb.tk/" title="Youssef Ben Taleb's Portfolio">Youssef Ben Taleb</a>
                 </div>
                 <div>
+                    <a class='thelinks' style="text-decoration:none" title="Malak Bentaleb">Malak Bentaleb</a>
+                </div>
+                <div>
                    This project is dedicated for the <a class='thelinks' style="text-decoration:none" href="https://patriothacks-2021.devpost.com/" title="PatriotHacks 2021 Hackathon">PatriotHacks 2021 Hackathon</a>
                 </div>
                 <div>
